# dbt_getting_started

./: .gitignore  README.md  dbt_tutorial.md  duckdb-cli.sh  ecommerce_analytics_end_to_end.md  ecommerce_pipeline_example.md  ecommerce_pipeline_tdd.md  ecommerce_pyspark_end_to_end.md  pyproject.toml
data_seeds/: raw_categories.csv  raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv
