[project]
name = "dbt-get-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "ipykernel>=6.30.1",
    "pyspark==3.5.3",
    "delta-spark==3.1.0",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "great-expectations==0.18.13",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]

[project.scripts]
pyspark-pipeline = "pyspark_pipeline.pipeline:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["pyspark_pipeline*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
